--- a/app/views/admin/events/index.html.slim
+++ b/app/views/admin/events/index.html.slim
@@ -4,13 +4,13 @@ main.content
   table.js-sort-column
     thead
       tr
-        th.-action-wide data-sorter="false" 編號
-        th data-sorter="false" 封面照片
+        th.width-50 data-sorter="false"
+        th.width-150.text-center data-sorter="false" 封面照片
         th 活動名稱
-        th 活動日期
-        th.-action-wide 是否報名
-        th.-action-wide 活動狀態
-        th.-action-wide 更新時間
+        th.width-150.text-center 活動日期
+        th.width-120.text-center 是否報名
+        th.width-120.text-center 活動狀態
+        th.width-170.text-center 更新時間
         th.-action data-sorter="false"
 
     tbody
@@ -21,15 +21,15 @@ main.content
             td = fae_index_image item.cover_image, edit_admin_event_path(item)
             td = link_to item.fae_display_field, edit_admin_event_path(item)
             - if item.start_on != item.end_on
-              td 
+              td.text-center 
                 = item.start_on.strftime("%Y.%m.%d")
                 | -
                 = item.end_on.strftime("%d")
             - else
-              td = item.start_on.strftime("%Y.%m.%d")
+              td.text-center = item.start_on.strftime("%Y.%m.%d")
             td = fae_toggle item, :need_apply
             td = fae_toggle item, :active
-            td = item.updated_at.strftime("%Y-%m-%d at %H:%M")
+            td.text-center = item.updated_at.strftime("%Y-%m-%d at %H:%M")
             td = fae_delete_button item
       - else
         tr: td colspan="4" No items found
