--- a/app/views/home/_subscription.slim
+++ b/app/views/home/_subscription.slim
@@ -3,7 +3,8 @@ section#subscription
   = inline_svg 'icon_ruby.svg'
 
   .subscription.input-group
-    input.form-control placeholder=t('helper.placeholder') type="email" required="required"/
-    span.input-group-btn
-      button.btn type="submit"
-        =t('helper.subscription')
+    form action="//rubyconf.us14.list-manage.com/subscribe/post?u=f8697172394cf1829922f9d1e&amp;id=81dd266430" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank"
+      input.required.form-control placeholder=t('helper.placeholder') name="EMAIL" type="email" required="required"/
+      span.input-group-btn
+        button.btn type="submit" name="subscribe"
+          = t('helper.subscription')
