--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,8 +2,7 @@ doctype html
 html
   head
     meta charset="utf-8" /
-    title = t('landing.title')
-    meta name="description" content = t('landing.description')
+    = seo_meta_tags
     meta content="yes" name="apple-mobile-web-app-capable" /
     meta content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport" /
     = csrf_meta_tags
