--- a/app/assets/stylesheets/style/_nav.sass
+++ b/app/assets/stylesheets/style/_nav.sass
@@ -10,6 +10,8 @@
   @media (min-width: $screen-md)
     padding: 5px 40px
     opacity: 0
+    &.affix-top
+      pointer-events: none
     &.affix
       opacity: 1
       background-color: #fff
