fixed social media icons on navbar

--- a/app/assets/stylesheets/style/_nav.sass
+++ b/app/assets/stylesheets/style/_nav.sass
@@ -52,7 +52,7 @@
   .nav
     li 
       &.social-media
-        width: 25%
+        width: calc(100%/3)
         display: inline-block
         a
           text-align: center
