--- a/app/assets/stylesheets/style/_nav.sass
+++ b/app/assets/stylesheets/style/_nav.sass
@@ -15,6 +15,7 @@
   box-shadow: 0 2px 5px rgba(0,0,0,0.1)
   min-height: 60px
   padding: 0
+  margin: 0
 
   @media (min-width: $screen-sm)
     padding: 5px 40px
