--- a/app/views/admin/blogs/_form.html.slim
+++ b/app/views/admin/blogs/_form.html.slim
@@ -4,7 +4,8 @@
   == render 'fae/shared/errors'
 
   main.content
-    = fae_input f, :title, label: '標題'
+    = fae_input f, :title, label: '標題', input_class: 'slugger'
+    = fae_input f, :slug, label: '網址', placeholder: 'some-blog-post'
     = fae_datepicker f, :date_of_news, label: '日期'
     = fae_input f, :content, markdown: true, markdown_supported: true, label: '內文'
     = fae_radio f, :active, type: 'inline', label: '發佈於首頁'
