更新網站連結

--- a/app/views/shared/_footer.slim
+++ b/app/views/shared/_footer.slim
@@ -1,4 +1,4 @@
 #footer
   p 
     | © 2017 Designed &#38; Powered by 
-    a href="https://5xruby.tw" 5XRUBY
+    a href="https://5xruby.com" 5XRUBY
