feat: add instagram and youtube icon links

--- a/app/views/home/_cover.slim
+++ b/app/views/home/_cover.slim
@@ -22,3 +22,7 @@
         i.fa.fa-github aria-hidden="true"
       = link_to t('social-media.facebook'), target: :_blank, class: "social-links" do
         i.fa.fa-facebook-official aria-hidden="true"
+      = link_to t('social-media.instagram'), target: :_blank, class: "social-links" do
+        i.fa.fa-instagram aria-hidden="true"
+      = link_to t('social-media.youtube'), target: :_blank, class: "social-links" do
+        i.fa.fa-youtube-play aria-hidden="true"
