--- a/app/views/shared/_nav.slim
+++ b/app/views/shared/_nav.slim
@@ -23,3 +23,9 @@ nav#affixNav.navbar.navbar-default.navbar-custom.navbar-fixed-top
         li.social-media
           = link_to t('social-media.facebook'), target: '_blank' do
             i.fa.fa-facebook-official aria-hidden="true"
+        li.social-media
+          = link_to t('social-media.instagram'), target: '_blank' do
+            i.fa.fa-instagram aria-hidden="true"
+        li.social-media
+          = link_to t('social-media.youtube'), target: '_blank' do
+            i.fa.fa-youtube-play aria-hidden="true"
