--- a/app/views/admin/blogs/_form.html.slim
+++ b/app/views/admin/blogs/_form.html.slim
@@ -1,4 +1,4 @@
-= simple_form_for([:admin, @item]) do |f|
+= simple_form_for([:admin, @item], url: @form_url) do |f|
   header.content-header.js-content-header
     == render 'fae/shared/form_header', header: @klass_name
   == render 'fae/shared/errors'
