fix: fix event card style
1. add line break
2. add text wraping

--- a/app/assets/stylesheets/style/_events.sass
+++ b/app/assets/stylesheets/style/_events.sass
@@ -100,6 +100,7 @@
           line-height: 1.6
           color: $dark-grey
           margin: 20px 0 50px
+          overflow-wrap: break-word
 
       .button-apply
         color: $warm-grey
